@@ -56,7 +56,7 @@ if __name__ == u"__main__":
 			# Change Qt API
 			import sip
 			sip.setapi('QString', 2)
-			sip.setapi('QVariant', 2)			
+			sip.setapi('QVariant', 2)
 			from PyQt4 import QtGui, QtCore
 		except:
 			libopensesame.misc.messagebox(u"OpenSesame Run",
@@ -83,7 +83,7 @@ if __name__ == u"__main__":
 	if isinstance(experiment, str):
 		experiment = safe_decode(experiment,
 			enc=libopensesame.misc.filesystem_encoding(), errors=u'ignore')
-	experiment_path = os.path.dirname(experiment)
+	# experiment_path = os.path.dirname(experiment)
 	logfile = options.logfile
 	if isinstance(logfile, str):
 		logfile = safe_decode(logfile,
@@ -100,11 +100,8 @@ if __name__ == u"__main__":
 		exp.end()
 	else:
 		# Try to parse the experiment from a file
-		experiment = os.path.abspath(options.experiment)
-		if isinstance(experiment, basestring):
-			experiment = safe_decode(experiment,
-				enc=libopensesame.misc.filesystem_encoding())
-		experiment_path = os.path.dirname(experiment)
+		experiment_path = safe_decode(os.path.abspath(options.experiment),
+			enc=libopensesame.misc.filesystem_encoding())
 		try:
 			exp = libopensesame.experiment.experiment(u"Experiment",
 				experiment, experiment_path=experiment_path)
