@@ -3,6 +3,8 @@ opensesame (3.0.6a1-ubuntu1) wily; urgency=medium
   * Bugs fixed
     - Fix a crash when adding an empty list to the file pool
     - Handle exotic variable types better in variable inspector (#388)
+  * Improvements
+    - Add `experiment_file` experimental variable, which contains the file name of the experiment (#387)
 
  -- Sebastiaan Mathot <sebastiaan@mantis>  Thu, 21 Jan 2016 20:55:07 +0100
 
